# ch32_cmake_example

./: CMakeLists.txt  README.md  riscv.cmake  setup.sh
User/: main.c
